--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "gatsby-plugin-sharp": "^2.2.37",
     "gatsby-source-filesystem": "^2.1.38",
     "gatsby-source-wordpress": "^3.1.49",
+    "gatsby-transformer-remark": "^2.6.37",
     "gatsby-transformer-sharp": "^2.3.3",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
   },
   "devDependencies": {
     "prettier": "^1.19.1"
